# ollie-optimization

./: .gitignore  LICENSE  README.rst  WORKFLOW  environment.yml  pyproject.toml
.github/workflows/: test.yml
Springer Nature Ollie Thesis/: ollie-optimization.tex  sn-jnl.cls
Springer Nature Ollie Thesis/Sections/: 4. Discussion.tex  RESULTS2.tex
code/: skateboard.py
examples/: flat_skateboard_ollie_optimization.py  segment_skateboard_ollie_optimization.py
misc/: ci-log-269470859a7c7113962da00c2c7fc7ce64c5b3fd.txt
ollie/: __init__.py  connection.py  constant.py  container.py  controller.py  friction.py  human.py  inertia.py  material.py  model.py  ollie.py  skateboard.py  typing.py
paper/: Makefile  ollie-optimization.tex  references.bib  sn-jnl.cls
paper/Sections/: 1. Introduction.tex  2. Method.tex  2.1 Mechanics of the ollie.tex  2.2 Optimization introduction.tex  2.3 Parameter.tex  2.4 Multiphase direct collocation.tex  2.5 Settings.tex  2.6 Summary.tex  3. Results.tex  5. Conclusion.tex  Appendix_A.tex  Appendix_B.tex
review/: letter-01.tex
skateboard/: __init__.py  skateboard.py  todo
tests/: test_skateboard.py
thesis-files/: CreateFiguresAndDumpData.py  CreateTableData.py  MultiPhaseOllieOptimization.py  create_data.py  todo
thesis-files/Ollie_thesis_final_final/: asme2ej.cls  asme2ej.tex  asmems4.bst  references.bib
thesis-files/Ollie_thesis_final_final/Sections/: 1. Introduction.tex  Appendix_A.tex  TODO.tex
thesis-files/Ollie_thesis_final_final/figure/: defstolatex.py
