[build-system]
requires = ["setuptools>=46.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Ollie"
description = "Ollie optimization"
version = "0.1.0"
authors = [
    { name = "Jan Heinen", email = "jan.heinen@hotmail.com" },
    { name = "Sam Brockie", email = "sambrockie@icloud.com" },
]

[tool.ruff]
line-length = 88
exclude = [
    "thesis-files/*",
]

[tool.mypy]
exclude = [
    "thesis-files",
]

[[tool.mypy.overrides]]
module = [
    "pycollo.*",
]
ignore_missing_imports = true
